I created relative positions.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,5 +59,8 @@
 		Aut, eligendi voluptates? Cupiditate a, perferendis optio tempore exercitationem accusantium quo consequuntur, perspiciatis ullam dolorem officiis assumenda. Autem delectus facere quisquam in unde atque? Itaque exercitationem corrupti rerum ex dolorum!
 		Voluptatem quas natus illum suscipit quia nostrum expedita, dicta consequuntur facilis minima nam adipisci debitis. Impedit laudantium fugiat ipsum libero quo accusantium, asperiores quisquam dolorem iusto quae totam ad veritatis?
 	</p>
+	<section><button>Click me!</button></section>
+	<section><button>Click me!</button></section>
+	<section><button>Click me!</button></section>
 </body>
 </html>
