I added background image to a section.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,59 +8,21 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="cube1">
-		<div id="cube2">
-			<div id="cube3">
-				<div id="cube4">
-					<div id="cube5">
-						<div id="cube6">
-							<div id="cube7">
-								<div id="cube8">
-									<div id="cube9">
-										<div id="cube10"></div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<p>
-		Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, at corporis, sit quae repellat harum ut consectetur omnis maiores nam autem totam voluptas quis amet dicta enim, cupiditate dolores quaerat.
-		Saepe doloremque enim facere recusandae voluptatem corrupti ab rem soluta facilis adipisci culpa quibusdam eaque iusto nobis, dolorem exercitationem quisquam inventore itaque dicta! Odit provident fugiat ad, ipsa a repellat.
-		Voluptatum dolorem quibusdam ex quasi at excepturi corporis impedit. Error quae quidem sapiente facilis architecto nam? Corporis animi error laudantium, officia fuga aliquam alias tempora nesciunt deserunt ea odio assumenda.
-		Exercitationem tempore corrupti dolore nam blanditiis? Sequi culpa adipisci assumenda ipsa repellendus, numquam nam inventore, voluptas esse quia, modi dolor rem magnam. Iste ipsam totam modi culpa, obcaecati recusandae suscipit!
-		Omnis quisquam facere minima temporibus consequatur minus excepturi porro ipsum fugit nostrum sit hic blanditiis esse dolores et, ratione corrupti beatae mollitia eaque inventore ducimus ad. Beatae deserunt molestias doloribus.
-		Dolore, molestiae ducimus! Molestias voluptas adipisci unde esse sunt pariatur rem, in a debitis harum ducimus vero qui impedit at sequi officiis fugit corporis ullam reprehenderit facilis? Quis, architecto doloremque.
-		Magni, dolorum? Ut rem maxime, neque, natus aperiam eum incidunt eveniet maiores fugiat sequi, accusantium impedit molestiae soluta? Illum soluta recusandae culpa aut temporibus dolor natus ex maiores perferendis voluptates.
-		Quis iure, aperiam, praesentium rem hic, tempora pariatur aliquam blanditiis nostrum cum beatae deserunt? Earum quisquam expedita quos dolorum tempora ab beatae et placeat error, nemo, ex dolorem minima repellat!
-		Ratione possimus vel magni quae delectus numquam repudiandae distinctio ipsam fuga aut tempora a doloremque mollitia expedita qui eveniet omnis officia, magnam optio nisi? Cupiditate voluptatibus nemo quaerat magni quo.
-		Possimus iusto vel perspiciatis dolore? Reiciendis quia esse, inventore necessitatibus optio, nulla cumque, error sit quibusdam qui facere fugit possimus. Aspernatur ea perspiciatis architecto vitae odio sequi pariatur iure vel.
-		Aspernatur, expedita. Illum nihil molestias dolorem quod esse odit, eveniet rem ut ipsa repudiandae reprehenderit nostrum fugit aspernatur beatae numquam dolor. Quidem deleniti nemo inventore quisquam laudantium molestiae vel eos?
-		Aperiam officiis id, officia, eum fugit dolorem molestiae tempore distinctio dicta iure magni. Possimus totam voluptate iste saepe necessitatibus facilis error labore mollitia, repellat porro tempore similique enim culpa excepturi?
-		Cum saepe quidem, libero laboriosam corrupti blanditiis numquam. Assumenda deserunt suscipit nulla nesciunt consequatur mollitia. Eius eum quos dolor. Doloremque, fugiat harum minima fugit laboriosam dolores deleniti saepe odio veniam.
-		Et, quas! Fugiat quod accusamus molestiae! Nulla velit ex provident voluptas? Nemo eveniet excepturi debitis voluptate sit maxime corrupti similique fuga! Nostrum ipsam in ut veritatis iure qui eius sit?
-		Accusamus earum tempora, cum consequuntur inventore ea aperiam, nemo repellat nisi optio nesciunt quia eveniet possimus harum deserunt eaque molestias, nihil illum fuga! Optio corporis officia quaerat id quia error?
-		Fuga odio quae necessitatibus sunt minus consectetur nihil nostrum laboriosam? Quisquam perspiciatis alias odit sit inventore harum nihil, necessitatibus laboriosam similique cupiditate quod? Pariatur, sit hic? Vel, porro? Mollitia, non!
-		Eaque laudantium facilis ad! Quasi explicabo veniam nesciunt. Aspernatur molestiae iste repellat, nemo dolorem harum aliquid expedita saepe, culpa nesciunt, aut libero impedit similique enim fugit ratione maxime inventore? Nihil.
-		Nemo minus corporis excepturi officia necessitatibus? Unde obcaecati illo dolorum explicabo maxime maiores cupiditate incidunt perferendis laborum impedit, aperiam doloremque beatae tempora, deserunt voluptatum esse rerum. Tempore, nobis? Impedit, distinctio?
-		Fugit aliquid culpa unde voluptas ad necessitatibus odit fuga nemo recusandae, praesentium, dolorum sit ullam debitis sunt, facere esse sint magnam. Vel, saepe! Veritatis vero placeat modi odio eligendi corporis?
-		Explicabo illo a asperiores aliquid eum at quasi, suscipit, eius nostrum placeat recusandae fugit architecto cum laborum enim iste harum quam dolore nisi ex! Sit ea consequatur reiciendis dolorem nostrum?
-		Nostrum nisi doloremque, corrupti minima dicta molestiae iusto ducimus voluptatem beatae temporibus iure aliquid eius aliquam repellat recusandae omnis ipsum! Repudiandae qui sequi doloribus rerum, totam esse aliquid recusandae ut.
-		Illo magni, ad et aspernatur modi a cum facilis deserunt? Velit, atque nostrum nulla pariatur harum quos quia exercitationem itaque quasi et inventore, rerum id ab fugit repellendus, blanditiis porro.
-		Veritatis dignissimos nam accusamus maiores mollitia sequi veniam, rem voluptatibus reprehenderit debitis earum eos sunt repellat pariatur aperiam non esse recusandae totam tempora autem ipsa quisquam reiciendis. Neque, architecto totam.
-		Dolores laborum suscipit ab nulla consequatur ratione hic minus sapiente neque rem dolor, repudiandae nostrum quis nisi, molestiae vel cupiditate harum, pariatur sint? Assumenda, molestiae quas iusto nobis suscipit explicabo.
-		Repellat quos soluta magnam? Libero dicta, beatae, provident rerum natus dignissimos possimus eum voluptas quaerat sapiente similique odio eos! Pariatur, nihil facere veritatis atque harum nostrum saepe amet. Expedita, voluptatum.
-		Quo rem labore illo consequuntur soluta corrupti, iusto ipsam libero quia quos itaque ex quidem odio voluptas provident quasi corporis! Tenetur nulla possimus aperiam ullam exercitationem alias temporibus vero voluptates?
-		Iusto iste optio, odit, quod ipsam provident nesciunt corporis libero maxime aperiam quos quisquam itaque a ratione aliquam illo eius distinctio. Deserunt possimus commodi repellat rerum exercitationem earum, quasi necessitatibus?
-		Qui alias iste, adipisci molestias ducimus maxime cumque. Blanditiis at, omnis officiis velit dolorum pariatur inventore explicabo ab eveniet similique? Deleniti doloribus vitae dolores beatae blanditiis excepturi animi eaque tempore.
-		Aut, eligendi voluptates? Cupiditate a, perferendis optio tempore exercitationem accusantium quo consequuntur, perspiciatis ullam dolorem officiis assumenda. Autem delectus facere quisquam in unde atque? Itaque exercitationem corrupti rerum ex dolorum!
-		Voluptatem quas natus illum suscipit quia nostrum expedita, dicta consequuntur facilis minima nam adipisci debitis. Impedit laudantium fugiat ipsum libero quo accusantium, asperiores quisquam dolorem iusto quae totam ad veritatis?
-	</p>
-	<section><button>Click me!</button></section>
-	<section><button>Click me!</button></section>
-	<section><button>Click me!</button></section>
+	<section id="section1"></section>
+	<section id="section2">
+		<form action="">
+			<label for="email">E-mail address</label>
+			<input type="email" name="email" id="email">
+			<label for="email">Password</label>
+			<input type="password" name="password" id="password">
+		</form>
+	</section>
+	<section class="paragraph-section background holder">
+		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur animi nihil totam sed, impedit, molestias enim placeat suscipit earum obcaecati libero? Eius nemo sunt modi, officia perspiciatis eligendi aliquam cupiditate?
+		Fuga perspiciatis omnis, expedita iure earum aliquam distinctio reprehenderit non nesciunt, tenetur harum suscipit quos minima, ad natus ipsa laborum eveniet incidunt debitis consequatur quis! Dolorum quibusdam possimus magni rem.</p>
+	</section>
+	<section id="section4">
+		<button>Push me!</button>
+	</section>
 </body>
 </html>
