--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,23 +6,61 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>This is FRONTEND</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-	<section id="section1"></section>
-	<section id="section2">
-		<form action="">
-			<label for="email">E-mail address</label>
-			<input type="email" name="email" id="email">
-			<label for="email">Password</label>
-			<input type="password" name="password" id="password">
-		</form>
-	</section>
-	<section class="paragraph-section background holder">
-		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur animi nihil totam sed, impedit, molestias enim placeat suscipit earum obcaecati libero? Eius nemo sunt modi, officia perspiciatis eligendi aliquam cupiditate?
-		Fuga perspiciatis omnis, expedita iure earum aliquam distinctio reprehenderit non nesciunt, tenetur harum suscipit quos minima, ad natus ipsa laborum eveniet incidunt debitis consequatur quis! Dolorum quibusdam possimus magni rem.</p>
-	</section>
-	<section id="section4">
+	<section id="welcome">
+		<img src="hacker.jpg" alt="">
+		<h1>Veni, Vidi, Vici</h1>
 		<button>Push me!</button>
+	</section>
+	<section id="about">
+		<article>
+			<h2>About us</h2>
+			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur animi nihil totam sed, impedit, molestias enim placeat suscipit earum obcaecati libero? Eius nemo sunt modi, officia perspiciatis eligendi aliquam cupiditate?Fuga perspiciatis omnis, expedita iure earum aliquam distinctio reprehenderit non nesciunt, tenetur harum suscipit quos minima, ad natus ipsa laborum eveniet incidunt debitis consequatur quis! Dolorum quibusdam possimus magni rem.
+			</p>			
+		</article>
+	</section>
+	<section id="services">
+		<ul>
+			<li>
+				<h2>Service1</h2>
+				<p>This is our service.</p>
+			</li>
+			<li>
+				<h2>Service2</h2>
+				<p>This is our service.</p>
+			</li>
+			<li>
+				<h2>Service 3</h2>
+				<p>This is our service.</p>
+			</li>
+			<li>
+				<h2>Service 4</h2>
+				<p>This is our service.</p>
+			</li>
+			<li>
+				<h2>Service 5</h2>
+				<p>This is our service.</p>
+			</li>
+			<li>
+				<h2>Service 6</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit minima aperiam perspiciatis cupiditate nostrum. Id vel debitis deserunt alias, modi facilis quas corrupti, minus labore numquam dolor possimus quisquam quis!
+				Provident eaque quaerat quo iure id corporis, perferendis temporibus quam. Voluptatum, ad aliquid nobis sequi nam sunt eius dicta amet maiores quam eligendi nisi similique, illo explicabo. Iusto, distinctio vitae!
+				</p>
+			</li>
+		</ul>
+	</section>
+	<section id="contact">
+		<form>
+			<label for="email">E-mail address</label>
+			<input type="email" placeholder="user@gmail.com" name="email" id="email">
+			<label for="email">Password</label>
+			<input type="password" placeholder="password" name="password" id="password">
+			<button>Sign In</button>
+		</form>
 	</section>
 </body>
 </html>
