I added some style.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
 	<section id="welcome">
 		<img src="hacker.jpg" alt="">
 		<h1>Veni, Vidi, Vici</h1>
-		<button>Push me!</button>
+		<button><a href="#contact">Push me!</a></button>
 	</section>
 	<section id="about">
 		<article>
@@ -52,14 +52,15 @@
 				</p>
 			</li>
 		</ul>
+		<button><a href="#contact"><img src="icon.png" alt="" width="40px"></a></button>
 	</section>
 	<section id="contact">
 		<form>
 			<label for="email">E-mail address</label>
-			<input type="email" placeholder="user@gmail.com" name="email" id="email">
+			<input type="email" placeholder="Your e-mail" name="email" id="email">
 			<label for="email">Password</label>
-			<input type="password" placeholder="password" name="password" id="password">
-			<button>Sign In</button>
+			<input type="password" placeholder="Create a password" name="password" id="password">
+			<button>Register</button>
 		</form>
 	</section>
 </body>
